# simulations

./: hello_pyglet.py  key.py  lifegame.rkt  main.py  pyproject.toml  walker.py
resources/: map.tmx
simulations/: person.py
