[tool.poetry]
name = "simulations"
version = "0.1.0"
description = ""
authors = ["xashes <xashes@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyglet = "^1.5.15"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
